MW-1324: Added free busy servlet
MW-1324: Applied review notes

MW-1324: minor

MW-1324: Applied review notes #2

MW-1324: minor cleanup
